[package]
name = "solana-arbitrage-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.18"
solana-client = "1.18"
spl-associated-token-account = "2.3"
spl-token = "4.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.12"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
base64 = "0.22"
bs58 = "0.5"
bincode = "1.3"
url = "2.5"
tracing = "0.1" # Добавлено для структурированного логирования
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] } # Добавлено для настройки логирования
